--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
           ssh -i ~/.ssh/deploy_key \
             -p ${{ secrets.SSH_PORT }} \
             ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
-            "pm2 restart dumoinference || pm2 start ~/dumoinference --name dumoinference"
+            "source ~/.bashrc && pm2 restart dumoinference || pm2 start ~/dumoinference --name dumoinference"
 
       - name: Cleanup
         if: always()
