--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.4.0",
     "@openrouter/sdk": "^0.0.1",
     "elysia": "^1.4.13",
     "openai": "^6.7.0",
